--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+################################################################################
+# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
+################################################################################
+
 # Prerequisites
 *.d
 
@@ -24,9 +28,44 @@
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
 *.out
 *.app
+
+# for CMake
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+cmake_uninstall.cmake
+.ninja_*
+*.ninja
+
+# for CLion
+.idea
+cmake-build-*
+
+# for Visual Studio Code
+.vscode/
+build
+
+# for Visual C++
+.vs
+out
+Debug
+Release
+x64
+GroupBox/Debug
+GroupBox/Release
+GroupBox/x64
+*.user
+*.ncb
+*.suo
+*.sdf
+
+# for Android
+outputs
+
+# for vcpkg
+vcpkg_installed
